package topstack_Compute;

option java_package = "com.transcend.compute.message";
option java_outer_classname = "AssociateAddressMessage";

message AssociateAddressRequest {
    required bool typeId = 104;
	required string callerAccessKey = 1;
	required string requestId = 2;
	optional string publicIp = 3;
	optional string instanceId = 4;
	optional string allocationId = 5;
	optional string networkInterfaceId = 6;
	optional string PrivateIpAddress = 7;
	optional bool allowReassociation = 8 [ default = false ];
}

message AssociateAddressResponse {
    required bool typeId = 105;
	required string callerAccessKey = 1;
	required string requestId = 2;
	required bool return = 3;
	optional string associationId = 4;
}
